@@ -2028,7 +2028,14 @@ echol "all : $needs"
 echodummyrule all
 echol
 
-echol
+# development targets
+echol "makemake : makemake.in";
+echotab "./config.status";
+echol;
+echol "Makefile : makemake";
+echotab "$0$makemake_args > Makefile.tmp";
+echotab "\$(MV) Makefile.tmp Makefile";
+echol;
 
 UTILS=''
 if [ $NEED_CCPAUX = true ] ; then
@@ -2732,6 +2739,9 @@ else
   localeflags=' -B .'
 fi
 
+echol "RUN= ${HERE}lisp${LEXE}$localeflags -Efile UTF-8 -norc";
+echol;
+
 if [ $CROSS = false ] ; then
 
   echol "$interpreted.mem : lisp${LEXE} \$(LISPFILES)"
@@ -2746,9 +2756,9 @@ if [ $CROSS = false ] ; then
     echotab "mv lisp.tmp lisp${LEXE}"
   fi
   if [ $HOS != os2 ] ; then
-    echotab "${HERE}lisp${LEXE} -m 750KW$localeflags -Efile UTF-8 -norc"' -x "(load \"init.lisp\") (sys::%saveinitmem) (exit)"'
+    echotab '$(RUN) -m 750KW -x "(load \"init.lisp\") (sys::%saveinitmem) (exit)"'
   else
-    echotab "${HERE}lisp${LEXE} -m 750KW$localeflags -Efile UTF-8 -norc < interpreted.in"
+    echotab '$(RUN) -m 750KW < interpreted.in'
   fi
   echotab "\$(MV) lispimag.mem $interpreted.mem"
   echol
@@ -2758,10 +2768,12 @@ fi
 if [ $CROSS = false ] ; then
 
   for f in $LPARTS ; do
-    echol "${f}.fas : ${f}.lisp lisp${LEXE} $interpreted.mem"
+    if [ $f = "compiler" ]; then image=${interpreted}.mem;
+    else image=${halfcompiled}.mem; fi
+    echol "${f}.fas : ${f}.lisp lisp${LEXE} $image"
     # The strict minimum needed for compiling compiler.lisp is between 750KW
     # and 800KW. To reduce GCs, we spend 20% more than this.
-    echotab "${HERE}lisp${LEXE} -m 1000KW -M $interpreted.mem$localeflags -Efile UTF-8 -norc -q -c ${f}.lisp"
+    echotab "\$(RUN) -m 1000KW -M ${image} -q -c ${f}.lisp"
     echol
   done
 
@@ -2787,15 +2799,11 @@ if [ $CROSS = false ] ; then
     echotab "mv lisp.tmp lisp${LEXE}"
   fi
   if [ $HOS != os2 ] ; then
-    echotab "${HERE}lisp${LEXE} -m 750KW$localeflags -Efile UTF-8 -norc"' -x "(load \"init.lisp\") (sys::%saveinitmem) (exit)"'
+    echotab '$(RUN) -m 750KW -x "(load \"init.lisp\") (sys::%saveinitmem) (exit)"'
   else
-    echotab "${HERE}lisp${LEXE} -m 750KW$localeflags -Efile UTF-8 -norc < interpreted.in"
+    echotab '$(RUN) -m 750KW < interpreted.in'
   fi
-  echotab "\$(MV) lispimag.mem $interpreted.mem"
-  # We touch $interpreted.mem only to avoid timestamp problems over NFS.
-  echotab "\$(TOUCH) $interpreted.mem"
-  echotab "\$(TOUCH) compiler.fas"
-  echotab "\$(TOUCH) $halfcompiled.mem"
+  echotab "\$(MV) lispimag.mem $halfcompiled.mem"
   echol
 
   echol "lispinit.mem : lisp${LEXE} \$(FASFILES)"
@@ -2808,9 +2816,9 @@ if [ $CROSS = false ] ; then
     echotab "mv lisp.tmp lisp${LEXE}"
   fi
   if [ $HOS != os2 ] ; then
-    echotab "${HERE}lisp${LEXE}$localeflags -Efile UTF-8 -norc"' -x "(load \"init.fas\") (sys::%saveinitmem) (exit)"'
+    echotab '$(RUN) -x "(load \"init.fas\") (sys::%saveinitmem) (exit)"'
   else
-    echotab "${HERE}lisp${LEXE}$localeflags -Efile UTF-8 -norc < lispinit.in"
+    echotab '$(RUN) < lispinit.in'
   fi
   echotab "\$(MV) lispimag.mem lispinit.mem"
   echol
@@ -2864,9 +2872,18 @@ if [ $CROSS = false ] ; then
     echol
   done
 
+  # have to reset *GENSYM-COUNTER* in the test image since the compiled
+  # files can (and some actually do, like threads.lisp) contain GENSYMed
+  # FLET locals, whose names are written to the FAS files
+  TESTIMAGE="${TESTDIR}${NEXT_M}testinit.mem";
+  echol "${TESTIMAGE}: lispinit.mem";
+  echotab "\$(RUN) -M lispinit.mem -x \"(setq *gensym-counter* (- \`\$(RUN) -q -M ${halfcompiled}.mem -x '*gensym-counter*'\` 16)) (sys::%saveinitmem) (exit)\"";
+  echotab "\$(MV) lispimag.mem ${TESTIMAGE}";
+  echol;
+
   for f in $LPARTS ; do
-    echol "${TESTDIR}${NEXT_M}${f}.fas : ${TESTDIR}${NEXT_M}${f}.lisp lisp${LEXE} lispinit.mem"
-    echotab "${HERE}lisp${LEXE} -M lispinit.mem$localeflags -Efile UTF-8 -norc -q -c ${TESTDIR}${NEXT}${f}.lisp"
+    echol "${TESTDIR}${NEXT_M}${f}.fas : ${TESTDIR}${NEXT_M}${f}.lisp lisp${LEXE} ${TESTIMAGE}"
+    echotab "\$(RUN) -M ${TESTIMAGE} -q -c ${TESTDIR}${NEXT}${f}.lisp"
     echol
   done
 
@@ -2876,7 +2893,7 @@ if [ $CROSS = false ] ; then
     echotab "cp -p lisp${LEXE} lisp.tmp"
     echotab "mv lisp.tmp lisp${LEXE}"
   fi
-  echotab "${HERE}lisp${LEXE}$localeflags -Efile UTF-8 -norc"' -x "(cd \"'"${TESTDIR}${NEXT}"'\") (load \"init.fas\") (cd \"'"${PARENT}"'\") (sys::%saveinitmem) (exit)"'
+  echotab '$(RUN) -x "(cd \"'"${TESTDIR}${NEXT}"'\") (load \"init.fas\") (cd \"'"${PARENT}"'\") (sys::%saveinitmem) (exit)"'
   echotab "-\$(RM) lispinit2.mem"
   echotab "\$(MV) lispimag.mem lispinit2.mem"
   echol
